--- a/resources/sass/_common.scss
+++ b/resources/sass/_common.scss
@@ -1,3 +1,9 @@
+.clearfix::after {
+    clear: both;
+    display: block;
+    content: "";
+}
+
 body {
      font-family: 'Montserrat', sans-serif;
 }
