--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -1,3 +1,6 @@
+.hamburger {
+     display: none;
+}
 .lamolisana-header {
      display: flex;
      flex-direction: column;
@@ -5,6 +8,7 @@
      align-items: center;
      width: 100vw;
      height: 300px;
+
      ul {
           list-style-type: none;
           margin: 0;
