--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -1,12 +1,17 @@
 .cards-list {
+     background-image: url('/../img/sfondo.jpg');
+     background-position: center;
+     padding: 30px 0 30px;
      section {
           display: flex;
           flex-direction: column;
           align-items: center;
+          // background-image: url('../img/sfondo.jpg');
           .titolo{
                width: 80%;
 
                h2 {
+                    text-transform: uppercase;
                     margin-left: 20px;
                     align-self: flex-start;
                }
@@ -15,7 +20,7 @@
                width: 80%;
                display: flex;
                flex-wrap: wrap;
-               .card{
+               .card {
                     flex-basis: calc((100% / 3) - 40px);
                     position: relative;
                     margin: 20px;
