--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -1,5 +1,5 @@
 .cards-list {
-     background-image: url('/../img/sfondo.jpg');
+     background-image: url('../../img/sfondo.jpg');
      background-position: center;
      padding: 30px 0 30px;
      section {
