--- a/public/css/app.css
+++ b/public/css/app.css
@@ -25,6 +25,36 @@ a {
   color: black;
 }
 
+.responsive {
+  max-width: 100%;
+  height: auto;
+}
+
+.fill {
+  -o-object-fit: fill;
+     object-fit: fill;
+}
+
+.contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.scale-down {
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
+}
+
+.none {
+  -o-object-fit: none;
+     object-fit: none;
+}
+
 /* header */
 
 .hamburger {
@@ -128,6 +158,34 @@ a {
 
 .cards-list section .cards .card .hover h3 {
   padding-bottom: 10px;
+}
+
+.container-prodotto {
+  background-color: #b9dae5;
+  width: 100%;
+  position: relative;
+  text-align: center;
+}
+
+.container-prodotto img {
+  width: 100%;
+  z-index: -1;
+}
+
+.container-prodotto .titolo-prodotto h1 {
+  padding: 50px;
+}
+
+.container-prodotto article {
+  display: flex;
+  justify-content: center;
+}
+
+.container-prodotto article p {
+  width: 80%;
+  text-align: left;
+  padding-bottom: 50px;
+  color: #042f71;
 }
 
 /* footer */
