--- a/resources/sass/_common.scss
+++ b/resources/sass/_common.scss
@@ -12,3 +12,15 @@ a {
      text-decoration: none;
      color: black;
 }
+
+.responsive {
+ max-width: 100%;
+  height: auto;
+
+}
+
+.fill {object-fit: fill;}
+.contain {object-fit: contain;}
+.cover {object-fit: cover;}
+.scale-down {object-fit: scale-down;}
+.none {object-fit: none;}
